Fixing videos autoplay mobile

--- a/index.html
+++ b/index.html
@@ -49,34 +49,38 @@
 
         <div class="video-container">
         <div class="project1">
-          <video src="videos/Road2Supercar.mp4" autoplay loop width="100%"></video>
+          <video src="videos/Road2Supercar.mp4" autoplay muted loop playsinline width="100%"></video>
           <h2>Road2Supercar</h2>
           <p>Car dealership ecommerce.</p>
-          <p>View</p>
+          <a href="">View</a>
         </div>
 
         <div class="project2">
-          <video src="videos/MoneeSplit.mp4" autoplay loop></video>
+          <video src="videos/MoneeSplit.mp4" autoplay muted loop playsinline></video>
           <h2>MoneeSplit</h2>
           <p>Budgeting App.</p>
+          <a href="">View</a>
         </div>
 
         <!-- <div class="project3"> Back2Benefits
           <img src="images/ecommerce.png" alt="project3 image" width= 100%>
           <h2>Back2Benefits</h2>
           <p>This is my third project description.</p>
+          <a href="">View</a>
         </div> -->
 
         <div class="project3">
-          <video src="videos/Calculator.mp4" autoplay loop></video>
+          <video src="videos/Calculator.mp4" autoplay muted loop playsinline></video>
           <h2>Online Calculator</h2>
           <p>This is my third project description.</p>
+          <a href="">View</a>
         </div>
 
          <div class="project3">
-          <video src="videos/RockPaperScissors.mp4" autoplay loop></video>
+          <video src="videos/RockPaperScissors.mp4" autoplay muted loop playsinline></video>
           <h2>Rock, Paper, Scissors</h2>
           <p>This is my third project description.</p>
+          <a href="">View</a>
         </div>
         </div>
       </section>
@@ -93,7 +97,7 @@
       <!-- Tech Stack Section -->
       <section class="tech-stack">
         <h2>Tech Stack</h4>
-        <h4>Technologies I have worked with</h4>
+        <h4>Technologies I have worked with:</h4>
 
         <div class="tech-icons">
           <i class="fa-brands fa-html5" style="font-size:60px; color:#E34F26;"></i>
