--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
 
         <div class="video-container">
         <div class="project1">
-          <video src="videos/Road2Supercar.mp4" autoplay muted loop playsinline width="100%"></video>
+          <video src="videos/Road2Supercar.mp4" autoplay muted loop playsinline></video>
           <h2>Road2Supercar</h2>
           <p>Car dealership ecommerce.</p>
-          <a href="">View</a>
+          <a href="https://main.d3s91fm4pflf76.amplifyapp.com">View</a>
         </div>
 
         <div class="project2">
           <video src="videos/MoneeSplit.mp4" autoplay muted loop playsinline></video>
           <h2>MoneeSplit</h2>
           <p>Budgeting App.</p>
-          <a href="">View</a>
+          <a href="https://www.moneesplit.com/">View</a>
         </div>
 
         <!-- <div class="project3"> Back2Benefits
@@ -69,18 +69,26 @@
           <a href="">View</a>
         </div> -->
 
+
         <div class="project3">
           <video src="videos/Calculator.mp4" autoplay muted loop playsinline></video>
           <h2>Online Calculator</h2>
-          <p>This is my third project description.</p>
-          <a href="">View</a>
+          <p>Simple Calculator.</p>
+          <a href="https://main.dkadwp70dcdax.amplifyapp.com/">View</a>
         </div>
 
-         <div class="project3">
+        <div class="project3">
+          <video src="videos/GoogleHomepage.mp4" autoplay muted loop playsinline></video>
+          <h2>Google Homepage</h2>
+          <p>Desktop Reconstruction 1:1</p>
+          <a href="https://main.du1vb68qexyz4.amplifyapp.com/">View</a>
+        </div>
+
+        <div class="project3">
           <video src="videos/RockPaperScissors.mp4" autoplay muted loop playsinline></video>
-          <h2>Rock, Paper, Scissors</h2>
-          <p>This is my third project description.</p>
-          <a href="">View</a>
+          <h2>Online Game</h2>
+          <p>Rock, Paper, Scissors.</p>
+          <a href="https://main.d3p2i3dzubtud.amplifyapp.com/">View</a>
         </div>
         </div>
       </section>
@@ -90,7 +98,7 @@
       <section class="learning">
         <h1>What to learn more about my projects?</h1>
         <a href="https://github.com/MassowNdiaye" target="_blank"> 
-          <p>Explore my GitHub</p></a>
+        Explore my GitHub</a>
       </section>
 
 
@@ -112,6 +120,7 @@
   <!--Footer-->
     <footer>
       <div class="footer">
+        <hr> <!--line break--> 
         <ul class="footer-links">
           <li><a href="index.html"><h4>Homepage</h4></a></li>
           <li><a href="reflection.html"><h4>Reflection</h4></a></li>
