--- a/resume.html
+++ b/resume.html
@@ -1,62 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <title>Resume Page</title>
-  <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css"> <!--Icons Library-->
-</head>
-<body>
+  <head>
+    <title>Resume Page</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css" />
+    <link rel="stylesheet" href="newstyle.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v6.7.2/css/all.css"
+    />
+    <!--Icons Library-->
+  </head>
+  <body>
     <!--Navigation Bar-->
-      <header>
-        <ul>
-          <li><a href="index.html">HOME</a></li> <!-- REMEBER TO REMOVE UNDERLINE ON THE LINKS-->
-          <li><a href="reflection.html">REFLECTION</a></li>
-          <li><a class="active" href="resume.html">RESUME</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-      </header>
-    
+    <header>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <!-- REMEBER TO REMOVE UNDERLINE ON THE LINKS-->
+        <li><a href="reflection.html">REFLECTION</a></li>
+        <li><a class="active" href="resume.html">RESUME</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
+    </header>
 
-      <!--Resume Page-->
-      <main>
-        <div class="title-center">
-          <h1>My Resume</h1>
-        </div>
+    <!--Resume Page-->
+    <main>
+      <div class="title-center">
+        <h1>My Resume</h1>
+      </div>
 
-        <div class="resume-img">
-          <img src="images/resume1.jpeg" alt="resume image 1">
-          <img src="images/resume2.jpeg" alt="resume image 2">
-        </div>
-
-      </main>
-
-
+      <div class="resume">
+        <iframe
+          src="Technical Resume_Elhadji.pdf"
+          width="100%"
+          height="800px"
+          frameborder="0"
+        ></iframe>
+      </div>
+    </main>
 
     <!--Footer-->
-      <footer>
-        <div class="footer">
-          <ul class="footer-links">
-            <li><a href="index.html"><h4>Homepage</h4></a></li>
-            <li><a href="reflection.html"><h4>Reflection</h4></a></li>
-            <li><a href="resume.html"><h4>Resume</h4></a></li>
-            <li><a href="contact.html"><h4>Contact</h4></a></li>
-          </ul>
+    <footer>
+      <div class="footer">
+        <hr />
+        <!--line break-->
+        <ul class="footer-links">
+          <li>
+            <a href="index.html"><h4>Homepage</h4></a>
+          </li>
+          <li>
+            <a href="reflection.html"><h4>Reflection</h4></a>
+          </li>
+          <li>
+            <a href="resume.html"><h4>Resume</h4></a>
+          </li>
+          <li>
+            <a href="contact.html"><h4>Contact</h4></a>
+          </li>
+        </ul>
 
-          <div class="connect"> 
-            <h4>Let's connect: </h4>
+        <!-- <div class="connect"> 
+          <h4>Let's connect: </h4> -->
 
-            <!--footer icons--> 
-            <a href="https://www.linkedin.com/in/elhadji-massow-ndiaye-b11397299/e" target="_blank">   
-            <i class="fa-brands fa-linkedin" style="font-size:25px"></i></a>
+        <!--footer icons-->
+        <div class="footer-icons">
+          <h4>Let's connect:</h4>
+          <a
+            href="https://www.linkedin.com/in/elhadji-massow-ndiaye-b11397299/e"
+            target="_blank"
+          >
+            <i class="fa-brands fa-linkedin" style="font-size: 25px"></i
+          ></a>
 
-            <a href="https://github.com/MassowNdiaye" target="_blank"> 
-            <i class="fa-brands fa-square-github" style="font-size:25px"></i></a>
-          </div>
+          <a href="https://github.com/MassowNdiaye" target="_blank">
+            <i class="fa-brands fa-square-github" style="font-size: 25px"></i
+          ></a>
         </div>
-      </footer>
-
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
