--- a/resume.html
+++ b/resume.html
@@ -34,12 +34,7 @@
       </div>
 
       <div class="resume">
-        <iframe
-          src="Technical Resume_Elhadji.pdf"
-          width="100%"
-          height="800px"
-          frameborder="0"
-        ></iframe>
+        <img src="images/Technical Resume.jpg" width="100%" alt="" />
       </div>
     </main>
 
