--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <!--About Me Section-->
       <section class="about-container">
         <div class="about-me">
-          <h2>About Me! ----</h2>
-          <h3>I enjoy solving problems by bringing new ideas to the table.</h3>
-          <p>Hello! My name is Elhadji Massow Ndiaye. I'm a Software Engineering Student and current R2H Tech Apprentice.</p>
+          <h2>About Me!</h2>
+          <!-- <h3>I enjoy solving problems by bringing new ideas to the table.</h3> -->
+          <p>Hello! My name is Elhadji Massow Ndiaye. I'm a current R2H Tech Apprentice.</p>
 
-          <i class="fa-brands fa-linkedin" style="font-size:40px"></i></a>
+          <a href="https://www.linkedin.com/in/elhadji-massow-ndiaye-b11397299/e"><i class="fa-brands fa-linkedin" style="font-size:40px"></i></a>
         </div>
 
         <div class="contact-me">
@@ -120,23 +120,18 @@
   <!--Footer-->
     <footer>
       <div class="footer">
-        <hr> <!--line break--> 
         <ul class="footer-links">
-          <li><a href="index.html"><h4>Homepage</h4></a></li>
-          <li><a href="reflection.html"><h4>Reflection</h4></a></li>
-          <li><a href="resume.html"><h4>Resume</h4></a></li>
-          <li><a href="contact.html"><h4>Contact</h4></a></li>
+          <li><a href="index.html">Homepage</a></li>
+          <li><a href="reflection.html">Reflection</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
 
-        <!-- <div class="connect"> 
-          <h4>Let's connect: </h4> -->
-
-          <!--footer icons-->
+        <!--footer icons-->
         <div class="footer-icons"> 
           <h4>Let's connect: </h4>
           <a href="https://www.linkedin.com/in/elhadji-massow-ndiaye-b11397299/e" target="_blank">   
           <i class="fa-brands fa-linkedin" style="font-size:25px"></i></a>
-
           <a href="https://github.com/MassowNdiaye" target="_blank"> 
           <i class="fa-brands fa-square-github" style="font-size:25px"></i></a>
         </div>
