--- a/resume.html
+++ b/resume.html
@@ -41,25 +41,12 @@
     <!--Footer-->
     <footer>
       <div class="footer">
-        <hr />
-        <!--line break-->
         <ul class="footer-links">
-          <li>
-            <a href="index.html"><h4>Homepage</h4></a>
-          </li>
-          <li>
-            <a href="reflection.html"><h4>Reflection</h4></a>
-          </li>
-          <li>
-            <a href="resume.html"><h4>Resume</h4></a>
-          </li>
-          <li>
-            <a href="contact.html"><h4>Contact</h4></a>
-          </li>
+          <li><a href="index.html">Homepage</a></li>
+          <li><a href="reflection.html">Reflection</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
-
-        <!-- <div class="connect"> 
-          <h4>Let's connect: </h4> -->
 
         <!--footer icons-->
         <div class="footer-icons">
@@ -70,7 +57,6 @@
           >
             <i class="fa-brands fa-linkedin" style="font-size: 25px"></i
           ></a>
-
           <a href="https://github.com/MassowNdiaye" target="_blank">
             <i class="fa-brands fa-square-github" style="font-size: 25px"></i
           ></a>
