--- a/resume.html
+++ b/resume.html
@@ -36,6 +36,12 @@
       <div class="resume">
         <img src="images/Technical Resume.jpg" width="100%" alt="" />
       </div>
+
+      <div class="download-btn">
+        <a href="images/Technical Resume.jpg" download class="btn-download">
+          <i class="fa fa-download"></i> Download My Resume
+        </a>
+      </div>
     </main>
 
     <!--Footer-->
