Pages improvements and responsivness

--- a/contact.html
+++ b/contact.html
@@ -35,53 +35,58 @@
 
       <!--Contact Form-->
       <div class="container">
-        <form action="action_page.php">
-          <!--firstname-->
-          <label for="fname">First Name:</label>
-          <input
-            type="text"
-            id="fname"
-            name="firstname"
-            placeholder="Your name.."
-          />
+        <div class="contact-img">
+          <img src="images/contact.png" width="100%" />
+        </div>
+        <div class="form">
+          <form action="action_page.php">
+            <!--firstname-->
+            <label for="fname">First Name:</label>
+            <input
+              type="text"
+              id="fname"
+              name="firstname"
+              placeholder="Your name.."
+            />
 
-          <!--lastname-->
-          <label for="lname">Last Name:</label>
-          <input
-            type="text"
-            id="lname"
-            name="lastname"
-            placeholder="Your last name.."
-          />
+            <!--lastname-->
+            <label for="lname">Last Name:</label>
+            <input
+              type="text"
+              id="lname"
+              name="lastname"
+              placeholder="Your last name.."
+            />
 
-          <!--Phone number-->
-          <label for="phone-num">Phone Number:</label>
-          <input
-            type="text"
-            id="phone-num"
-            name="phone-num"
-            placeholder="Your phone number.."
-          />
+            <!--Phone number-->
+            <label for="phone-num">Phone Number:</label>
+            <input
+              type="text"
+              id="phone-num"
+              name="phone-num"
+              placeholder="Your phone number.."
+            />
 
-          <!--email-->
-          <label for="email">Email:</label>
-          <input
-            type="text"
-            id="email"
-            name="email"
-            placeholder="Your email.."
-          />
+            <!--email-->
+            <label for="email">Email:</label>
+            <input
+              type="text"
+              id="email"
+              name="email"
+              placeholder="Your email.."
+            />
 
-          <label for="Comments">Comments:</label>
-          <textarea
-            id="Comments"
-            name="Comments"
-            placeholder="Write something.."
-            style="height: 200px"
-          ></textarea>
+            <label for="Comments">Comments:</label>
+            <textarea
+              id="Comments"
+              name="Comments"
+              placeholder="Write something.."
+              style="height: 200px"
+            ></textarea>
 
-          <input type="submit" value="Submit" />
-        </form>
+            <input type="submit" value="Submit" />
+          </form>
+        </div>
       </div>
     </main>
 
