--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
     <main>
       <!-- Hero container -->
       <div class="hero-container">
-        <img src="/images/hero-image.png" alt="hero image" width= 100%>
+        <img src="images/hero-img.png" alt="hero image" width= 100%>
       </div>
 
       <!--About Me Section-->
       <section class="about-container">
         <div class="about-me">
           <h2>About Me!</h2>
-          <!-- <h3>I enjoy solving problems by bringing new ideas to the table.</h3> -->
-          <p>Hello! My name is Elhadji Massow Ndiaye. I'm a current R2H Tech Apprentice.</p>
+          <p>Hello! My name is Elhadji Massow Ndiaye.<br> I'm a current R2H Tech Apprentice.</p>
 
           <a href="https://www.linkedin.com/in/elhadji-massow-ndiaye-b11397299/e"><i class="fa-brands fa-linkedin" style="font-size:40px"></i></a>
         </div>
@@ -61,30 +60,30 @@
           <p>Budgeting App.</p>
           <a href="https://www.moneesplit.com/">View</a>
         </div>
-
-        <!-- <div class="project3"> Back2Benefits
-          <img src="images/ecommerce.png" alt="project3 image" width= 100%>
-          <h2>Back2Benefits</h2>
-          <p>This is my third project description.</p>
-          <a href="">View</a>
-        </div> -->
-
-
+        
         <div class="project3">
+          <video src="videos/MoneeSplit.mp4" autoplay muted loop playsinline></video>
+          <h2>Back2Benefits</h2>
+          <p>Non-profit Team Project</p>
+          <a href="https://www.moneesplit.com/">View</a>
+        </div>
+
+
+        <div class="project4">
           <video src="videos/Calculator.mp4" autoplay muted loop playsinline></video>
           <h2>Online Calculator</h2>
           <p>Simple Calculator.</p>
           <a href="https://main.dkadwp70dcdax.amplifyapp.com/">View</a>
         </div>
 
-        <div class="project3">
+        <div class="project5">
           <video src="videos/GoogleHomepage.mp4" autoplay muted loop playsinline></video>
           <h2>Google Homepage</h2>
           <p>Desktop Reconstruction 1:1</p>
           <a href="https://main.du1vb68qexyz4.amplifyapp.com/">View</a>
         </div>
 
-        <div class="project3">
+        <div class="project6">
           <video src="videos/RockPaperScissors.mp4" autoplay muted loop playsinline></video>
           <h2>Online Game</h2>
           <p>Rock, Paper, Scissors.</p>
@@ -96,7 +95,7 @@
 
       <!--Learn more about projects section-->
       <section class="learning">
-        <h1>What to learn more about my projects?</h1>
+        <h1>Want to learn more <br> about my projects?</h1>
         <a href="https://github.com/MassowNdiaye" target="_blank"> 
         Explore my GitHub</a>
       </section>
