Implementing hamburger menu

--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
 
   <!--Navigation Bar-->
   <header>
-    <ul>
-      <li class="header"><a class="active" href="index.html">Home</a></li> 
-      <li class="header"><a href="reflection.html">Reflection</a></li>
-      <li class="header"><a href="resume.html">Resume</a></li>
-      <li class="header"><a href="contact.html">Contact</a></li>
+  <div class="nav-container">
+    <button class="hamburger" aria-label="Menu">
+      <i class="fa-solid fa-bars"></i>
+    </button>
+
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="reflection.html">Reflection</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
-  </header>
+  </div>
+</header>
 
   <body>
     <main>
