--- a/resume.html
+++ b/resume.html
@@ -18,13 +18,18 @@
   <body>
     <!--Navigation Bar-->
     <header>
-      <ul>
-        <li><a href="index.html">HOME</a></li>
-        <!-- REMEBER TO REMOVE UNDERLINE ON THE LINKS-->
-        <li><a href="reflection.html">REFLECTION</a></li>
-        <li><a class="active" href="resume.html">RESUME</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-      </ul>
+      <div class="nav-container">
+        <button class="hamburger" aria-label="Menu">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="reflection.html">Reflection</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
     </header>
 
     <!--Resume Page-->
@@ -70,4 +75,6 @@
       </div>
     </footer>
   </body>
+  <!--JavaScript Connection-->
+  <script src="script.js"></script>
 </html>
