--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
   <!--Navigation Bar-->
   <header>
-  <div class="nav-container">
+    <div class="nav-container">
+    <div class="logo">
+      <a href="index.html"><img src="images/logo.png" alt="Site Logo"></a>
+    </div>
+    <div class="nav-container">
     <button class="hamburger" aria-label="Menu">
       <i class="fa-solid fa-bars"></i>
     </button>
