--- a/reflection.html
+++ b/reflection.html
@@ -19,16 +19,20 @@
     <!--Navigation Bar-->
     <header>
       <div class="nav-container">
-        <button class="hamburger" aria-label="Menu">
-          <i class="fa-solid fa-bars"></i>
-        </button>
+      <div class="logo">
+        <a href="index.html"><img src="images/logo.png" alt="Site Logo"></a>
+      </div>
+      <div class="nav-container">
+      <button class="hamburger" aria-label="Menu">
+        <i class="fa-solid fa-bars"></i>
+      </button>
 
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="reflection.html">Reflection</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="reflection.html">Reflection</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
       </div>
     </header>
 
