--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Home Page | Portfolio Project</title>
+    <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css"> <!--Slidershow-->
     <link rel="stylesheet" href="newstyle.css">
