Adding certifications slider and images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- Hero container -->
       <div class="hero-container">
         <img src="images/hero-img.png" alt="hero image" width= 100%>
-      </div>
+      </div>   
 
       <!--About Me Section-->
       <section class="about-container">
@@ -76,7 +76,7 @@
           <video src="videos/Back2Benefits.mp4" autoplay muted loop playsinline></video>
           <h2>Back2Benefits</h2>
           <p>Non-profit Team Project</p>
-          <a href="">View</a>
+          <a href="https://github.com/MassowNdiaye/Back2Benefits">View</a>
         </div>
 
 
@@ -112,9 +112,28 @@
       </section>
 
 
+       <!-- My certifications -->
+      <section class="certifications">
+        <div class="cert-titles">
+          <h2>Certifications</h2>
+          <h4>Recognized qualifications and achievements</h4>
+        </div>
+        <div class="slider-container">
+          <button class="prev" onclick="prevSlide()">❮</button>
+          <div class="slider">
+            <img src="certifications/GitHub_Certification.jpg" class="slide active" width="100%">
+            <img src="certifications/CSS_certification.jpg" class="slide" width="100%">
+            <img src="certifications/ProjectManagement_Certification.jpg" class="slide" width="100%">
+            <img src="certifications/Agile_Certification.jpg" class="slide" width="100%">
+          </div>
+        <button class="next" onclick="nextSlide()">❯</button>
+        </div>
+      </section>
+
+
       <!-- Tech Stack Section -->
       <section class="tech-stack">
-        <h2>Tech Stack</h4>
+        <h2>Tech Stack</h2>
         <h4>Technologies I have worked with:</h4>
 
         <div class="tech-icons">
@@ -126,6 +145,7 @@
           <i class="fa-brands fa-git-alt" style="font-size:60px; color:#F05032;"></i>
         </div>
       </section>
+
 
       <!-- CHATBOT -->
       <!-- Chat Window -->
