--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 
       <!--Learn more about projects section-->
       <section class="learning">
-        <h1>Want to learn more <br> about my projects?</h1>
+        <h1>Want to learn more about my projects?</h1>
         <a href="https://github.com/MassowNdiaye" target="_blank"> 
         Explore my GitHub</a>
       </section>
 
 
-       <!-- My certifications -->
+      <!-- My certifications -->
       <section class="certifications">
         <div class="cert-titles">
           <h2>Certifications</h2>
