--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="nav-container">
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="Site Logo"></a>
+      <a href="index.html"><img src="/images/logo.png" alt="Site Logo"></a>
     </div>
     <div class="nav-container">
     <button class="hamburger" aria-label="Menu">
@@ -34,7 +34,7 @@
     <main>
       <!-- Hero container -->
       <div class="hero-container">
-        <img src="images/hero-img.png" alt="hero image" width= 100%>
+        <img src="/images/hero-img.png" alt="hero image" width= 100%>
       </div>   
 
       <!--About Me Section-->
@@ -59,21 +59,21 @@
 
         <div class="video-container">
         <div class="project1">
-          <video src="videos/Road2Supercar.mp4" autoplay muted loop playsinline></video>
+          <video src="/videos/Road2Supercar.mp4" autoplay muted loop playsinline></video>
           <h2>Road2Supercar</h2>
           <p>Car dealership ecommerce.</p>
           <a href="https://main.d3s91fm4pflf76.amplifyapp.com">View</a>
         </div>
 
         <div class="project2">
-          <video src="videos/MoneeSplit.mp4" autoplay muted loop playsinline></video>
+          <video src="/videos/MoneeSplit.mp4" autoplay muted loop playsinline></video>
           <h2>MoneeSplit</h2>
           <p>Budgeting App.</p>
           <a href="https://www.moneesplit.com/">View</a>
         </div>
         
         <div class="project3">
-          <video src="videos/Back2Benefits.mp4" autoplay muted loop playsinline></video>
+          <video src="/videos/Back2Benefits.mp4" autoplay muted loop playsinline></video>
           <h2>Back2Benefits</h2>
           <p>Non-profit Team Project</p>
           <a href="https://github.com/MassowNdiaye/Back2Benefits">View</a>
@@ -81,21 +81,21 @@
 
 
         <div class="project4">
-          <video src="videos/Calculator.mp4" autoplay muted loop playsinline></video>
+          <video src="/videos/Calculator.mp4" autoplay muted loop playsinline></video>
           <h2>Online Calculator</h2>
           <p>Simple Calculator.</p>
           <a href="https://main.dkadwp70dcdax.amplifyapp.com/">View</a>
         </div>
 
         <div class="project5">
-          <video src="videos/GoogleHomepage.mp4" autoplay muted loop playsinline></video>
+          <video src="/videos/GoogleHomepage.mp4" autoplay muted loop playsinline></video>
           <h2>Google Homepage</h2>
           <p>Desktop Reconstruction 1:1</p>
           <a href="https://main.du1vb68qexyz4.amplifyapp.com/">View</a>
         </div>
 
         <div class="project6">
-          <video src="videos/RockPaperScissors.mp4" autoplay muted loop playsinline></video>
+          <video src="/videos/RockPaperScissors.mp4" autoplay muted loop playsinline></video>
           <h2>Online Game</h2>
           <p>Rock, Paper, Scissors.</p>
           <a href="https://main.d3p2i3dzubtud.amplifyapp.com/">View</a>
@@ -121,10 +121,10 @@
         <div class="slider-container">
           <button class="prev" onclick="prevSlide()">❮</button>
           <div class="slider">
-            <img src="certifications/GitHub_Certification.jpg" class="slide active" width="100%">
-            <img src="certifications/CSS_certification.jpg" class="slide" width="100%">
-            <img src="certifications/ProjectManagement_Certification.jpg" class="slide" width="100%">
-            <img src="certifications/Agile_Certification.jpg" class="slide" width="100%">
+            <img src="/certifications/GitHub_Certification.jpg" class="slide active" width="100%">
+            <img src="/certifications/CSS_certification.jpg" class="slide" width="100%">
+            <img src="/certifications/ProjectManagement_Certification.jpg" class="slide" width="100%">
+            <img src="/certifications/Agile_Certification.jpg" class="slide" width="100%">
           </div>
         <button class="next" onclick="nextSlide()">❯</button>
         </div>
