--- a/code/resume.html
+++ b/code/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Contact Page</title>
+    <title>Resume Page</title>
     <link
       href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round"
       rel="stylesheet"
@@ -17,10 +17,10 @@
   </head>
   <body>
     <!--Navigation Bar-->
-    <header>
+     <header>
       <div class="nav-container">
       <div class="logo">
-        <a href="index.html"><img src="images/logo.png" alt="Site Logo"></a>
+        <a href="index.html"><img src="/images/logo.png" alt="Site Logo"></a>
       </div>
       <div class="nav-container">
       <button class="hamburger" aria-label="Menu">
@@ -36,66 +36,20 @@
       </div>
     </header>
 
-    <!--Page Title-->
+    <!--Resume Page-->
     <main>
-      <div class="page-title">
-        <h1>Contact Form</h1>
+      <div class="title-center">
+        <h1>My Resume</h1>
       </div>
 
-      <!--Contact Form-->
-      <div class="container">
-        <div class="contact-img">
-          <img src="images/contact.png" width="100%" />
-        </div>
-        <div class="form">
-          <form action="action_page.php">
-            <!--firstname-->
-            <label for="fname">First Name:</label>
-            <input
-              type="text"
-              id="fname"
-              name="firstname"
-              placeholder="Your name.."
-            />
+      <div class="resume">
+        <img src="/images/Technical Resume.jpg" width="100%" alt="" />
+      </div>
 
-            <!--lastname-->
-            <label for="lname">Last Name:</label>
-            <input
-              type="text"
-              id="lname"
-              name="lastname"
-              placeholder="Your last name.."
-            />
-
-            <!--Phone number-->
-            <label for="phone-num">Phone Number:</label>
-            <input
-              type="text"
-              id="phone-num"
-              name="phone-num"
-              placeholder="Your phone number.."
-            />
-
-            <!--email-->
-            <label for="email">Email:</label>
-            <input
-              type="text"
-              id="email"
-              name="email"
-              placeholder="Your email.."
-            />
-
-            <label for="Comments">Comments:</label>
-            <textarea
-              id="Comments"
-              name="Comments"
-              placeholder="Write something.."
-              style="height: 200px"
-            ></textarea>
-
-            <input type="submit" value="Submit" />
-          </form>
-        </div>
+      <div class="download-btn">
+        <a href="/images/Technical Resume.jpg" download class="btn-download">
+          <i class="fa fa-download"></i> Download My Resume
+        </a>
       </div>
     </main>
 
@@ -118,7 +72,7 @@
           >
             <i class="fa-brands fa-linkedin" style="font-size: 25px"></i
           ></a>
-          <a href="https://github.com/MassowNdiaye" target="_blank">
+          <a href="/https://github.com/MassowNdiaye" target="_blank">
             <i class="fa-brands fa-square-github" style="font-size: 25px"></i
           ></a>
         </div>
