--- a/code/RegularPages/index.html
+++ b/code/RegularPages/index.html
@@ -4,10 +4,10 @@
     <title>Home Page | Portfolio Project</title>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css"> <!--Slidershow-->
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css"> <!--Icons Library-->
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png">
   </head>
 
   <!--Navigation Bar-->
@@ -23,12 +23,13 @@
 
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
+      <li><a href="/code/AdvancedPage/projectsdetails.html">Projects Details</a></li>
       <li><a href="reflection.html">Reflection</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
-</header>
+  </header>
 
   <body>
     <main>
@@ -187,6 +188,7 @@
       <div class="footer">
         <ul class="footer-links">
           <li><a href="index.html">Homepage</a></li>
+          <li><a href="/code/AdvancedPage/projectsdetails.html">Projects Details</a></li>
           <li><a href="reflection.html">Reflection</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
