--- a/code/RegularPages/resume.html
+++ b/code/RegularPages/resume.html
@@ -29,6 +29,7 @@
 
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
+        <li><a href="/code/AdvancedPage/projectsdetails.html">Projects Details</a></li>
         <li><a href="reflection.html">Reflection</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -57,7 +58,8 @@
     <footer>
       <div class="footer">
         <ul class="footer-links">
-          <li><a href="index.html">Homepage</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="/code/AdvancedPage/projectsdetails.html">Projects Details</a></li>
           <li><a href="reflection.html">Reflection</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
