moving folder/files

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <title>Home Page | Portfolio Project</title>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
-    <link rel="stylesheet" href="newstyle.css">
+    <link rel="stylesheet" href="/code/RegularPages/newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css"> <!--Icons Library-->
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png">
