Fixing images and links routes

--- a/code/RegularPages/AdvancedPage/projectsdetails.html
+++ b/code/RegularPages/AdvancedPage/projectsdetails.html
@@ -14,7 +14,7 @@
     <header>
       <div class="nav-container">
       <div class="logo">
-        <a href="/code/RegularPages/index.html"><img src="/images/logo.png" alt="Site Logo"></a>
+        <a href="RegularPages/index.html"><img src="../images/logo.png" alt="Site Logo"></a>
       </div>
       <div class="nav-container">
       <button class="hamburger" aria-label="Menu">
@@ -22,11 +22,11 @@
       </button>
 
       <ul class="nav-links">
-        <li><a href="/code/RegularPages/index.html">Home</a></li>
-        <li><a href="/code/AdvancedPage/projectsdetails.html">Projects Details</a></li>
-        <li><a href="/code/RegularPages/reflection.html">Reflection</a></li>
-        <li><a href="/code/RegularPages/resume.html">Resume</a></li>
-        <li><a href="/code/RegularPages/contact.html">Contact</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="projectsdetails.html">Projects Details</a></li>
+        <li><a href="../reflection.html">Reflection</a></li>
+        <li><a href="../resume.html">Resume</a></li>
+        <li><a href="../contact.html">Contact</a></li>
       </ul>
     </div>
     </header>
@@ -112,11 +112,11 @@
     <footer>
       <div class="footer">
         <ul class="footer-links">
-          <li><a href="index.html">Homepage</a></li>
-          <li><a href="/code/AdvancedPage/projectsdetails.html">Projects Details</a></li>
-          <li><a href="reflection.html">Reflection</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="../index.html">Homepage</a></li>
+          <li><a href="projectsdetails.html">Projects Details</a></li>
+          <li><a href="../reflection.html">Reflection</a></li>
+          <li><a href="../resume.html">Resume</a></li>
+          <li><a href="../contact.html">Contact</a></li>
         </ul>
 
         <!--footer icons-->
