--- a/code/RegularPages/contact.html
+++ b/code/RegularPages/contact.html
@@ -20,7 +20,7 @@
     <header>
       <div class="nav-container">
       <div class="logo">
-        <a href="index.html"><img src="/images/logo.png" alt="Site Logo"></a>
+        <a href="index.html"><img src="images/logo.png" alt="Site Logo"></a>
       </div>
       <div class="nav-container">
       <button class="hamburger" aria-label="Menu">
@@ -29,7 +29,7 @@
 
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="/code/AdvancedPage/projectsdetails.html">Projects Details</a></li>
+        <li><a href="AdvancedPage/projectsdetails.html">Projects Details</a></li>
         <li><a href="reflection.html">Reflection</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -46,7 +46,7 @@
       <!--Contact Form-->
       <div class="container">
         <div class="contact-img">
-          <img src="/images/contact.png" width="100%" />
+          <img src="images/contact.png" width="100%" />
         </div>
         <div class="form">
           <form action="action_page.php">
@@ -104,7 +104,8 @@
     <footer>
       <div class="footer">
         <ul class="footer-links">
-          <li><a href="index.html">Homepage</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="AdvancedPage/projectsdetails.html">Projects Details</a></li>
           <li><a href="reflection.html">Reflection</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
