--- a/code/RegularPages/resume.html
+++ b/code/RegularPages/resume.html
@@ -20,7 +20,7 @@
      <header>
       <div class="nav-container">
       <div class="logo">
-        <a href="index.html"><img src="/images/logo.png" alt="Site Logo"></a>
+        <a href="index.html"><img src="images/logo.png" alt="Site Logo"></a>
       </div>
       <div class="nav-container">
       <button class="hamburger" aria-label="Menu">
@@ -29,7 +29,7 @@
 
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="/code/AdvancedPage/projectsdetails.html">Projects Details</a></li>
+        <li><a href="AdvancedPage/projectsdetails.html">Projects Details</a></li>
         <li><a href="reflection.html">Reflection</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -44,11 +44,11 @@
       </div>
 
       <div class="resume">
-        <img src="/images/Technical Resume.jpg" width="100%" alt="" />
+        <img src="images/Technical Resume.jpg" width="100%" alt="" />
       </div>
 
       <div class="download-btn">
-        <a href="/images/Technical Resume.jpg" download class="btn-download">
+        <a href="images/Technical Resume.jpg" download class="btn-download">
           <i class="fa fa-download"></i> Download My Resume
         </a>
       </div>
@@ -59,7 +59,7 @@
       <div class="footer">
         <ul class="footer-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="/code/AdvancedPage/projectsdetails.html">Projects Details</a></li>
+          <li><a href="AdvancedPage/projectsdetails.html">Projects Details</a></li>
           <li><a href="reflection.html">Reflection</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
