Fixing ../script.js connection

--- a/code/RegularPages/AdvancedPage/projectsdetails.html
+++ b/code/RegularPages/AdvancedPage/projectsdetails.html
@@ -131,7 +131,7 @@
     </footer>
     
   <!--JavaScript Connection-->
-  <script src="/code/RegularPages/script.js"></script>
+  <script src="../script.js"></script>
 
   <!--JSON File Connection-->
   <script src="project.js"></script>
