--- a/code/RegularPages/AdvancedPage/projectsdetails.html
+++ b/code/RegularPages/AdvancedPage/projectsdetails.html
@@ -14,7 +14,7 @@
     <header>
       <div class="nav-container">
       <div class="logo">
-        <a href="RegularPages/index.html"><img src="../images/logo.png" alt="Site Logo"></a>
+        <a href="../index.html"><img src="../images/logo.png" alt="Site Logo"></a>
       </div>
       <div class="nav-container">
       <button class="hamburger" aria-label="Menu">
