fixing footer mobile / adding JavaScript Certification

--- a/code/RegularPages/index.html
+++ b/code/RegularPages/index.html
@@ -122,7 +122,8 @@
         <div class="slider-container">
           <button class="prev" onclick="prevSlide()">❮</button>
           <div class="slider">
-            <img src="certifications/GitHub_Certification.jpg" class="slide active" width="100%">
+            <img src="certifications/JavaScript - Certificate.jpg" class="slide active" width="100%">
+            <img src="certifications/GitHub_Certification.jpg" class="slide" width="100%">
             <img src="certifications/CSS_certification.jpg" class="slide" width="100%">
             <img src="certifications/ProjectManagement_Certification.jpg" class="slide" width="100%">
             <img src="certifications/Agile_Certification.jpg" class="slide" width="100%">
